Upload project file

--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
             <!-- header -->
             <header class="main-header">
                 <!--  logo  -->
-                <div class="logo-holder"><a href="listing.html"><img src="images/logo.png" alt=""></a></div>
+                <div class="logo-holder"><a href="index.html"><img src="images/logo.png" alt=""></a></div>
                 <!-- logo end  -->
                 <!-- nav-button-wrap--> 
                 <div class="nav-button-wrap color-bg nvminit">
@@ -73,7 +73,7 @@
                     <nav>
                         <ul class="no-list-style">
                             <li>
-                                <a href="listing.html">Home</a>
+                                <a href="index.html">Home</a>
                                 <!--second level end-->
                             </li>
                             <!-- <li>
@@ -120,7 +120,7 @@
                             <div class="price-rage-item fl-wrap">
                                 <input type="text" class="price-range" data-min="100" data-max="100000"  name="price-range1"  data-step="1" value="1" data-prefix="$">
                             </div>
-                            <button onclick="location.href='listing.html'" type="button"  class="btn float-btn color-bg"><i class="fal fa-search"></i> Search</button>
+                            <button onclick="location.href='index.html'" type="button"  class="btn float-btn color-bg"><i class="fal fa-search"></i> Search</button>
                         </form>
                     </div>
                 </div>
@@ -266,7 +266,7 @@
                     <div class="breadcrumbs fw-breadcrumbs sp-brd fl-wrap">
                         <div class="container">
                             <div class="breadcrumbs-list">
-                                <a href="listing.html">Home</a> <span>About</span>
+                                <a href="index.html">Home</a> <span>About</span>
                             </div>
                         </div>
                     </div>
@@ -425,7 +425,7 @@
                                                 <li><a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
                                                 <li><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></li>
                                                 <li><a href="#" target="_blank"><i class="fab fa-instagram"></i></a></li>
-                                                <li><a href="#" target="_blank"><i class="fab fa-vk"></i></a></li>
+                                                <li><a href="#" target="_blank"><i class="fab fa-youtube"></i></a></li>
                                             </ul>
                                             <a href="mailto:yourmail@email.com" class="tolt tf-btn" data-microtip-position="top-right" data-tooltip="Write Message"><i class="fal fa-envelope"></i></a>
                                         </div>
@@ -448,7 +448,7 @@
                                                 <li><a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
                                                 <li><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></li>
                                                 <li><a href="#" target="_blank"><i class="fab fa-instagram"></i></a></li>
-                                                <li><a href="#" target="_blank"><i class="fab fa-vk"></i></a></li>
+                                                <li><a href="#" target="_blank"><i class="fab fa-youtube"></i></a></li>
                                             </ul>
                                             <a href="mailto:yourmail@email.com" class="tolt tf-btn" data-microtip-position="top-right" data-tooltip="Write Message"><i class="fal fa-envelope"></i></a>
                                         </div>
@@ -471,7 +471,7 @@
                                                 <li><a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
                                                 <li><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></li>
                                                 <li><a href="#" target="_blank"><i class="fab fa-instagram"></i></a></li>
-                                                <li><a href="#" target="_blank"><i class="fab fa-vk"></i></a></li>
+                                                <li><a href="#" target="_blank"><i class="fab fa-youtube"></i></a></li>
                                             </ul>
                                             <a href="mailto:yourmail@email.com" class="tolt tf-btn" data-microtip-position="top-right" data-tooltip="Write Message"><i class="fal fa-envelope"></i></a>
                                         </div>
